# stellarSpecModel

./: .gitignore  LICENSE  README.md  demo.py  setup.cfg
stellarSpecModel/: SED_model.py  SpecGrid.py  SpecModel.py  __init__.py  binary_SED_model.py  config.py  excepts.py  fetch_grid.py  filter_name_table.txt  phot_util.py  stellarSpecModel.py  tlusty.py  tlustyWD.py
stellarSpecModel/filter_data/: filter_info.txt  readme.txt
test/: SEDinfo.csv  test_MARCS.py  test_SED_model.py  test_binary_SED_model.py  test_btcond.py  test_compare_BTCond_hiRes_MARCS.py  test_tlusty.py  test_tlustyWD.py  test_w3_filter.py
