[metadata]
name = stellarSpecModel
version = 0.1.0
author = Zhang ZhiXiang
author_email = zhangzhixiangby@163.com
license = MIT
description = A package for stellar spectral model
long_description = file: README.md
keywords = astronomy, astrophysics, stellar, spectra, interpolation
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific :: Astronomy

[options]
packages = find:
python_requires = >=3.6
zip_safe = False
include_package_data = True
install_requires =
    numpy
    scipy
    astropy

[options.package_data]
* = *.txt
stellarSpecModel = filter_data/*